--- a/src/components/catalogue-item/index.astro
+++ b/src/components/catalogue-item/index.astro
@@ -137,14 +137,13 @@ import { observer } from "./observer";
 
                     const json = await resp.json()
                     const { apiResponse } = json as {apiResponse:IAddToBagResponse}
-                    console.log(apiResponse)
-                    // const { cartItemMap } = apiResponse
+                    const { cartItemMap } = apiResponse
 
-                    // dispatchInternalEvent(ADD_TO_BAG_FROM_CATALOGUE,apiResponse)
+                    dispatchInternalEvent(ADD_TO_BAG_FROM_CATALOGUE,apiResponse)
 
-                    // qtyInCart = cartItemMap[id].quantity
-                    // updateAddToBagBtn()
-                    // setLoading(false)
+                    qtyInCart = cartItemMap[id].quantity
+                    updateAddToBagBtn()
+                    setLoading(false)
                 } else if (!!currentCollectionPoint) {
                     const collectionPontOnQtyIncreaseCheckbox = document.getElementById("collection-point-on-qty-increase") as HTMLInputElement
                     const collectionPointNameElem = document.getElementById('current-collection-point-name') as HTMLSpanElement
