--- a/src/components/contact/index.astro
+++ b/src/components/contact/index.astro
@@ -45,7 +45,7 @@ import { whiteBtnClass } from '@misc';
         required
     />
     <p id="confact-form-error-msg" class="mt-4 text-red-700 text-sm hidden" />
-    <input disabled type="submit" value="Submit" class="turnstile-check w-full mt-6 py-2 uppercase font-serif tracking-[0.2rem] md:tracking-[0.3rem] [word-spacing:0.05em] md:[word-spacing:0.1em] cursor-pointer text-white bg-gray-600 border border-gray-600 duration-300 font-semibold text-xs md:text-base enabled:mouse:hover:bg-black enabled:mouse:hover:border-black disabled:cursor-not-allowed" />
+    <input disabled type="submit" value="Submit" class="turnstile-check w-full mt-6 mb-4 py-2 uppercase font-serif tracking-[0.2rem] md:tracking-[0.3rem] [word-spacing:0.05em] md:[word-spacing:0.1em] cursor-pointer text-white bg-gray-600 border border-gray-600 duration-300 font-semibold text-xs md:text-base enabled:mouse:hover:bg-black enabled:mouse:hover:border-black disabled:cursor-not-allowed" />
 </form>
 <div id="submit-success" class="max-w-96 mx-auto hidden flex-col justify-center py-4 px-4">
     <h1 class="font-display text-2xl [word-spacing:0.3rem]">Message Received</h1>
