--- a/src/components/track-order/order-details.astro
+++ b/src/components/track-order/order-details.astro
@@ -25,8 +25,7 @@ const { shippingAddress:{
     paymentMethod,
     location,
     orderDate,
-    deliveredDT,
-    deliveryProofImageFilename
+    deliveredDT
 }, cartContent: {
     staffDiscount,
     memberDiscount,
